# profile-example

./: .gitignore  .pre-commit-config.yaml  .vale.ini  LICENSE  README.md  mac_maker.yml  pyproject.toml
.cicd-tools/configuration/: cicd-tools.json
.cookiecutter/: cookiecutter.json
.github/config/actions/: gaurav-nelson-github-action-markdown-link-check.json
.github/scripts/: job-50-test-precommit.sh  setup.sh  step-setup-environment.sh
.github/workflows/: push.yml  workflow-push.yml
.vale/Vocab/profile-example/: accept.txt
profile/: .ansible-lint  .yamllint.yml  install.yml  requirements.yml
profile/__precheck__/: env.yml  notes.txt
profile/handlers/: main.yml
profile/tasks/post_install/: main.yml
profile/vars/: main.yml
